# spline-editor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bunny.off  main.cpp
src/: beziermesh.cpp  beziermesh.h  bsplinemesh.cpp  bsplinemesh.h  controlmesh.cpp  controlmesh.h  editor.cpp  editor.h  main.cpp  splinecore.h  typedefines.h
